--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "@babel/polyfill": "^7.4.4",
     "@element-plus/icons-vue": "^2.1.0",
     "@tinymce/tinymce-vue": "^4.0.0",
+    "@fullcalendar/core": "^6.1.10",
+    "@fullcalendar/daygrid": "^6.1.10",
+    "@fullcalendar/interaction": "^6.1.10",
+    "@fullcalendar/timegrid": "^6.1.10",
+    "@fullcalendar/vue3": "^6.1.10",
+    "@fullcalendar/list": "6.1.14",
     "axios": "^0.24.0",
     "core-js": "^3.23.5",
     "dayjs": "^1.10.4",
