--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
     "@element-plus/icons-vue": "^2.1.0",
-    "@tinymce/tinymce-vue": "^4.0.0",
     "@fullcalendar/core": "^6.1.10",
     "@fullcalendar/daygrid": "^6.1.10",
     "@fullcalendar/interaction": "^6.1.10",
+    "@fullcalendar/list": "6.1.14",
     "@fullcalendar/timegrid": "^6.1.10",
     "@fullcalendar/vue3": "^6.1.10",
-    "@fullcalendar/list": "6.1.14",
+    "@tinymce/tinymce-vue": "^4.0.0",
     "axios": "^0.24.0",
     "core-js": "^3.23.5",
     "dayjs": "^1.10.4",
@@ -36,6 +36,7 @@
     "photoswipe": "^4.1.2",
     "screenfull": "^4.2.0",
     "swiper": "^6.4.5",
+    "tree-cli": "^0.6.7",
     "vue": "^3.2.24",
     "vue-picture-cropper": "^0.1.9",
     "vue-router": "^4.0.10",
