--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -12,11 +12,19 @@ jobs:
       - name: Check Out Repo
         uses: actions/checkout@v2
 
-      - name: Log in to Docker Hub
+      - name: Load .env file
+        run: |
+          set -a
+          . ./.env.production
+          set +a
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+
+      - name: Log in to Alibaba Cloud Container Registry
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: crpi-gjiqcc10v58u83a9.cn-hangzhou.personal.cr.aliyuncs.com
+          username: ${{ secrets.ALIYUN_USERNAME }}
+          password: ${{ secrets.ALIYUN_PASSWORD }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
@@ -24,4 +32,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: yangts0955/cms-vue:1.0.0
+          tags: crpi-gjiqcc10v58u83a9.cn-hangzhou.personal.cr.aliyuncs.com/qtcms/qt-cms-vue:${{ env.VERSION }}
